# surql-parser

./: .gitignore  .gitleaks.toml  CHANGELOG.md  CLAUDE.md  COMPATIBILITY.md  Cargo.toml  DIRTY_HACKS.md  LICENSE  Makefile.toml  README.md  ROADMAP.md  UPSTREAM_HASH  UPSTREAM_SYNC.md  cliff.toml  deny.toml  release-plz.toml  rustfmt.toml
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: ci.yml  release-cli.yml  release.yml  security.yml
editors/examples/: 01_basics.surql  02_schema.surql  03_relations.surql  04_functions.surql  05_advanced.surql  06_real_world_app.surql  07_edge_cases.surql
editors/zed/: Cargo.toml  README.md  extension.toml
editors/zed/examples/: 04_functions.surql  05_advanced.surql  07_edge_cases.surql
editors/zed/grammars/: surrealql.wasm
editors/zed/src/: surrealql.rs
examples/sample-project/: Cargo.toml  build.rs  manifest.toml
examples/sample-project/src/: lib.rs
examples/sample-project/surql/: functions.surql  schema.surql
examples/sample-project/surql/examples/: 01_basics.surql  02_schema.surql  03_relations.surql  04_functions.surql  05_advanced.surql  06_real_world_app.surql  07_edge_cases.surql
examples/sample-project/surql/migrations/: 001_initial_schema.surql  002_add_tags_and_indexes.surql  003_add_relations_and_events.surql  004_drop_legacy_fields.surql
examples/sample-project/surql/schema/: functions.surql  tables.surql
examples/sample-project/surql/tests/: test_create_agent.surql  test_migration_status.surql
examples/sample-project/tests/: e2e.rs
lsp/: CHANGELOG.md  Cargo.toml  README.md
lsp/src/: completion.rs  context.rs  diagnostics.rs  document.rs  dotenv.rs  embedded.rs  embedded_db.rs  formatting.rs  hover.rs  keywords.rs  lib.rs  main.rs  manifest.rs  server.rs  signature.rs  tests.rs
lsp/tests/: integration.rs
macros/: CHANGELOG.md  Cargo.toml  README.md
macros/src/: lib.rs  query_inference.rs  type_check.rs
macros/tests/: macro_tests.rs
macros/tests/schema_ui/: fail_function_arity_mismatch.rs  fail_function_arity_mismatch.stderr  fail_function_query_mode_type_mismatch.rs  fail_function_query_mode_type_mismatch.stderr  fail_function_type_mismatch.rs  fail_function_type_mismatch.stderr  fail_query_type_mismatch.rs  fail_query_type_mismatch.stderr  pass_function_query_mode.rs  pass_function_schema_match.rs  pass_function_type_match.rs  pass_query_schema_match.rs
macros/tests/ui/: fail_check_invalid_sql.rs  fail_check_invalid_sql.stderr  fail_check_unclosed_string.rs  fail_check_unclosed_string.stderr  fail_function_empty.rs  fail_function_empty.stderr  fail_function_no_prefix.rs  fail_function_no_prefix.stderr  fail_function_schema_path.rs  fail_function_schema_path.stderr  fail_missing_from.rs  fail_missing_from.stderr  fail_partial_define.rs  fail_partial_define.stderr  fail_query_extra_param.rs  fail_query_extra_param.stderr  fail_query_invalid_sql.rs  fail_query_invalid_sql.stderr  fail_query_missing_param.rs  fail_query_missing_param.stderr  fail_typo_keyword.rs  fail_typo_keyword.stderr  fail_unclosed_paren.rs  fail_unclosed_paren.stderr  pass_check_complex.rs  pass_check_simple.rs  pass_function_basic.rs  pass_function_nested.rs  pass_function_with_schema.rs  pass_query_no_params.rs  pass_query_with_params.rs
mcp/: CHANGELOG.md  Cargo.toml  README.md
mcp/src/: file_ops.rs  lib.rs  main.rs  validation.rs
mcp/tests/: e2e.rs
overshift/: CHANGELOG.md  Cargo.toml  README.md  build.rs
overshift/sql/: bootstrap.surql
overshift/src/: changelog.rs  error.rs  lib.rs  lock.rs  manifest.rs  migration.rs  plan.rs  schema.rs  shadow.rs  snapshot.rs  validate.rs
overshift/tests/: integration_test.rs  manifest_test.rs  migration_test.rs  proptest_test.rs  rollback_test.rs  schema_test.rs  shadow_verification_test.rs  snapshot_test.rs
overshift/tests/common/: mod.rs
overshift/tests/fixtures/sample_project/: manifest.toml
overshift/tests/fixtures/sample_project/migrations/: v001_seed.surql  v002_more_data.surql
overshift/tests/fixtures/sample_project/schema/_shared/: analyzers.surql
overshift/tests/fixtures/sample_project/schema/entity/: fn.surql  indexes.surql  table.surql
scripts/: extract-doc-examples.py  parse-builtins.py  sync-builtins.sh  sync-upstream.sh
src/: build.rs  builtins_generated.rs  compat.rs  config.rs  diff.rs  doc_urls.rs  error.rs  filesystem.rs  formatting.rs  keywords.rs  lib.rs  lint.rs  params.rs  recovery.rs  schema_graph.rs  schema_lookup.rs
src/upstream/: mod.rs
src/upstream/fmt/: escape.rs  mod.rs
src/upstream/sql/: access.rs  access_type.rs  algorithm.rs  ast.rs  base.rs  block.rs  changefeed.rs  closure.rs  cond.rs  constant.rs  data.rs  dir.rs  explain.rs  expression.rs  fetch.rs  field.rs  file.rs  filter.rs  function.rs  group.rs  idiom.rs  index.rs  kind.rs  language.rs  limit.rs  literal.rs  lookup.rs  mock.rs  mod.rs  model.rs  module.rs  operator.rs  order.rs  output.rs  param.rs  part.rs  permission.rs  reference.rs  scoring.rs  script.rs  (+8 more)
src/upstream/syn/: mod.rs  test.rs
tests/: build_helpers.rs  diagnostics.rs  doc_examples.rs  error_messages.rs  extract_params.rs  parse_statements.rs  proptest_fuzz.rs  recovery.rs  roundtrip.rs  schema_diff.rs  schema_graph.rs  upstream_fixtures.rs
tests/common/: mod.rs
tests/fixtures/doc-examples/: clauses_fetch_0.surql  clauses_from_1.surql  clauses_group-by_0.surql  clauses_limit_0.surql  clauses_limit_2.surql  clauses_omit_0.surql  clauses_omit_1.surql  clauses_order-by_0.surql  clauses_order-by_1.surql  clauses_split_0.surql  clauses_split_1.surql  clauses_split_2.surql  clauses_split_3.surql  clauses_split_4.surql  clauses_split_5.surql  clauses_where_0.surql  clauses_where_1.surql  clauses_where_2.surql  clauses_where_3.surql  clauses_with_0.surql  datamodel_arrays_0.surql  datamodel_arrays_1.surql  datamodel_arrays_10.surql  datamodel_arrays_11.surql  datamodel_arrays_2.surql  datamodel_arrays_3.surql  datamodel_arrays_4.surql  (+1557 more)
tools/transform/: Cargo.toml  mappings.toml
tools/transform/src/: main.rs  mappings.rs
transforms/patches/: module.rs.override
(+135 files in other folders)
