[package]
name = "surql-macros"
version = "0.1.1"
edition = "2024"
license = "Apache-2.0"
description = "Compile-time SurrealQL validation macros for surql-parser"
repository = "https://github.com/overrealdb/surql-parser"
keywords = ["surrealdb", "surrealql", "parser", "macro", "proc-macro"]
categories = ["parser-implementations", "development-tools::procedural-macro-helpers"]
readme = "README.md"
rust-version = "1.94"

[lib]
proc-macro = true

[dependencies]
surql-parser = { path = "..", version = "0.1" }
syn = { version = "2", features = ["full"] }
quote = "1"
proc-macro2 = "1"

[dev-dependencies]
trybuild = "1"
