[package]
name = "surql-mcp"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "MCP server for SurrealQL — interactive query playground with embedded SurrealDB"
repository = "https://github.com/overrealdb/surql-parser"
publish = false

[[bin]]
name = "surql-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "0.16", features = ["server", "macros", "schemars", "transport-io"] }
surrealdb = { version = "3", default-features = false, features = ["kv-mem"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
toml = "0.8"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
