[package]
name = "surql-mcp"
version = "0.1.1"
edition = "2024"
license = "Apache-2.0"
description = "MCP server for SurrealQL — interactive query playground with embedded SurrealDB"
repository = "https://github.com/overrealdb/surql-parser"
readme = "README.md"
keywords = ["surrealdb", "surrealql", "mcp", "context-protocol", "playground"]
categories = ["development-tools", "database"]

[lib]
name = "surql_mcp"
path = "src/lib.rs"

[[bin]]
name = "surql-mcp"
path = "src/main.rs"

[dependencies]
rmcp = { version = "0.16", features = ["server", "macros", "schemars", "transport-io"] }
surrealdb = { version = "3", default-features = false, features = ["kv-mem"] }
overshift = { path = "../overshift", version = "0.2", default-features = false }
surql-parser = { path = "..", version = "0.1" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
toml = "1.0"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"
