[package]
name = "surql-transform"
version = "0.1.0"
edition = "2024"
publish = false

[[bin]]
name = "surql-transform"
path = "src/main.rs"

[dependencies]
syn = { version = "2", features = ["full", "visit-mut", "parsing", "printing"] }
quote = "1"
proc-macro2 = "1"
prettyplease = "0.2"
toml = "0.8"
serde = { version = "1", features = ["derive"] }
walkdir = "2"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
